--- a/myvue.html
+++ b/myvue.html
@@ -32,8 +32,8 @@
         <div class="sub"><span>{{subMessage}}</span></div>
         <div>{{obj.name}}</div>
     </div>
-    <script src="./myvue.js"></script>
-    <!-- <script src="./myvue2.js"></script> -->
+    <!-- <script src="./myvue.js"></script> -->
+    <script src="./myvue2.js"></script>
     <script>
         let vue = new Vue({
             el: "#app",
